<resources>
    <string name="app_name">Chess4Android</string>
    <string name="title">Chess Royale</string>
    <string name="fetch_new_game_button">Play Chess</string>
    <string name="fetch_puzzle_button">Daily Puzzle</string>
    <string name="about_button">About</string>
    <string name="authors">Authors</string>
    <string name="puzzle_from">Daily puzzle from:</string>
    <string name="author1" translatable="false">Tiago Ribeiro</string>
    <string name="author2" translatable="false">Diogo Fernandes</string>
    <string name="source_api" translatable="false">Lichess.org API reference (2.0.0)</string>
    <string name="current_player_white">Next move: White</string>
    <string name="current_player_black">Next move: Black</string>
    <string name="solution_achieved">You\'ve achieved the puzzle solution</string>
    <string name="wrong_turn">Not your turn</string>
    <string name="history_button">History</string>
    <string name="textView_isSolved">Solved</string>
    <string name="textView_notSolved">Not solved</string>
    <string name="solve_puzzle">Solve puzzle</string>
    <string name="see_solution">" See solution"</string>
    <string name="reset_board">Reset Board</string>
</resources>