<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main_activity.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="127dp">


    <Button
        android:id="@+id/fetch_new_game_button"
        style="@android:style/Widget.Button"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#9C8BC34A"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/fetch_new_game_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#0E0E0D"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <Button
        android:id="@+id/fetch_puzzle_button"
        style="@android:style/Widget.Button"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#9C8BC34A"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/fetch_puzzle_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#0E0E0D"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetch_new_game_button" />

    <Button
        android:id="@+id/about_button"
        style="@android:style/Widget.Button"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#9C8BC34A"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/about_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#050505"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_button" />

    <Button
        android:id="@+id/history_button"
        style="@android:style/Widget.Button"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#9C8BC34A"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/history_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#050505"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fetch_puzzle_button" />

    <ImageView
        android:id="@+id/pieces_img"
        android:layout_width="253dp"
        android:layout_height="138dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pieces_img" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title"
        android:textAllCaps="false"
        android:textColor="#D1AB03"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieces_img" />


</androidx.constraintlayout.widget.ConstraintLayout>